Fix text alignment on firefox

--- a/style.css
+++ b/style.css
@@ -271,6 +271,11 @@ kbd {
   padding-top: .2em;
 }
 
+#url-json-file {
+  width: 100%;
+  height: 2em;
+}
+
 .sidebar--collapsed {
   width: var(--nav-icon-width);
   overflow-x: hidden;
